# mistserver

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitattributes  .gitignore  Dockerfile  Dockerfile.mistserver  README.md  codecov.yml  gcovr.cfg  interface.html  lefthook.yml  meson.build  meson_options.txt  pnpm-lock.yaml  pnpm-workspace.yaml  push.html
.github/workflows/: build.yml  ci.yml  lint.yml
embed/: .npmignore  README.md  build.sh  minimize_internal.sh  package.json  player.js  skins.js  util.js  vfs_manifest.txt
embed/min/: player.js
embed/players/: webcodecsworker.js
embed/skins/: default.css  dev.css  general.css
embed/src/: iife.js  index.js
embed/wrappers/: mews.js  rawws.js  rawwscanvas.js  webrtc.js  wheprtc.js
lib/: amf.cpp  amf.h  bitstream.cpp  bitstream.h  cmaf.cpp  cmaf_live.cpp  cmaf_live.h  config.cpp  defines.h  device.cpp  device.h  device_ndi.cpp  device_ndi.h  device_onvif.cpp  device_onvif.h  device_visca.cpp  device_visca.h  downloader.cpp  downloader.h  dtsc.cpp  dtsc.h  ebml_socketglue.cpp  ebml_socketglue.h  embedded_fs.h  flv_tag.cpp  foghorn.cpp  foghorn.h  h264.cpp  h264.h  h265.cpp  h265.h  hls_support.cpp  hls_support.h  http_parser.cpp  json.cpp  json.h  jwt.cpp  meson.build  mp4_generic.h  mp4_stream.cpp  (+25 more)
lib/ffmpeg/: audio_decoder_node.cpp  audio_decoder_node.h  audio_encoder_node.cpp  audio_encoder_node.h  audio_frame_context.cpp  audio_frame_context.h  audio_transformer_node.cpp  audio_transformer_node.h  hw_context_manager.cpp  hw_context_manager.h  meson.build  node_pipeline.cpp  node_pipeline.h  packet_context.cpp  packet_context.h  packet_egress.cpp  packet_egress.h  processing_node.h  utils.cpp  utils.h  video_decoder_node.cpp  video_decoder_node.h  video_encoder_node.cpp  video_encoder_node.h  video_frame_context.cpp  video_frame_context.h  video_transformer_node.cpp  video_transformer_node.h
lib/ndi/: NOTICE.md
lsp/: .gitignore  README.md  generateLSP.sh  main.css  meson.build  minified.js  mist.js  package.json  pnpm-lock.yaml  server.html
lsp/css/: admin.css  auth.css  cameras.css  connections.css  core.css  overview.css  playground.css  push.css  search.css  streams.css
lsp/modules/: main.js  main_efg.js  main_playground.js
lsp/modules/brands/: efg.js  mi.js  playground.js
lsp/modules/cameras/: api.js  camera_detail.js  camera_list.js  component.js  dom.js  index.js  multiview.js  ptz_control.js  stream_dialog.js
lsp/modules/components/: accordion_tree.js  card_picker.js  composer.js  disclosure_form.js  hints_footer.js  inline_editor.js  wizard.js
lsp/modules/core/: api_client.js  app_state.js  appshell.js  capabilities.js  clipboard.js  constants.js  dom_helpers.js  dynamic.js  form_engine.js  formatters.js  icons.js  init.js  mist_helpers.js  mode_dispatch.js  navigation.js  search_ui.js  section_registry.js  sockets.js  tab_registry.js  tab_view.js  themes.js  ui_core.js  ui_helpers.js
lsp/modules/efg/: api.js  init.js  media.js  refresh.js  streams.js
lsp/modules/fun/: duck_swarm.js
lsp/modules/pages/: auth.js  chart_helpers.js  connections.js  dashboard.js  general.js  help.js  overview.js  protocols.js  triggers.js  variables.js
lsp/modules/playground/: api.js  config.js  init.js  mist_sources.js  player_fw.js  player_mist.js  player_panel.js  publisher.js  streams.js  theme_panel.js
lsp/modules/pushes/: push.js  push_config.js  push_renderers.js  push_scenarios.js  pushes.js
lsp/modules/streams/: process_templates.js  stream_config.js  stream_hints.js  stream_save.js  stream_scenarios.js  stream_utils.js  streamkeys.js  streams.js
lsp/plugins/: cattablesort.js  md5.js  qrcode.js
lsp/scripts/: lsp_preflight.sh  lsp_smoke_check.js
lsp/templates/: efg.html  playground.html
lsp/test/lsp/: api_client.test.js  appshell_mode.test.js  push_scenarios.test.js  sockets.test.js  stream_save.test.js  stream_scenarios.test.js
lsp/test/lsp/helpers/: module_loader.js
mist/: meson.build
mist/ffmpeg/: meson.build
nautophone/: index.html  nautophone.js  readme.txt
scripts/: install-linux.sh  install-macos.sh  lint-analyze.sh  lint-report.sh  run-clang-tidy.sh
src/: embedfs.cpp  io.cpp  io.h  make_html.cpp  session.cpp  sourcery.cpp
src/controller/: controller.cpp  controller_api.cpp  controller_api.h  controller_capabilities.cpp  controller_connectors.cpp  controller_discovery.cpp  controller_discovery.h  controller_discovery_utils.cpp  controller_push.cpp  controller_push.h  controller_statistics.cpp  controller_statistics.h  controller_storage.cpp  controller_streams.cpp  controller_updater.cpp  meson.build
src/input/: input.cpp  input.h  input_balancer.cpp  input_buffer.cpp  input_buffer.h  input_dtsc.cpp  input_ebml.cpp  input_ebml.h  input_hls.cpp  input_ismv.cpp  input_mp4.cpp  input_ndi.cpp  input_ndi.h  input_rawgenerator.cpp  input_rawgenerator.h  input_rtsp.cpp  input_ts.cpp  input_tsrist.cpp  input_tssrt.cpp  meson.build  processing_profile.cpp  processing_profile.h
src/output/: meson.build  mist_out.cpp  output.cpp  output.h  output_cmaf.cpp  output_cmaf.h  output_dtsc.cpp  output_dtscquic.cpp  output_dtscquic.h  output_ebml.h  (+27 more)
subprojects/: ffmpeg.wrap  mbedtls.wrap  x264.wrap
test/: av_codec_registry.cpp  controller_discovery_unit.cpp  deviceinfo.cpp  dtsc_part_time_unit.cpp  json.cpp  meson.build  nal_classifier_unit.cpp  soap_onvif.cpp  socketbuffer.cpp  ts_packet_unit.cpp  visca_capabilities.cpp  xml_document.cpp
(+77 files in other folders)
